feat: Adding new recipe pages and images for those recipes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/creamy-vegan-pasta.html">"Creamy Vegan Pasta</a>
-    
+    <ul>
+        <li><a href="recipes/creamy-mushroom-broccoli-pasta.html">Creamy Vegan Mushroom Broccoli Pasta</a></li>
+        <li><a href="recipes/lentil-chickpea-salad.html">Lentil and Chickpea Salad</a></li>
+        <li><a href="recipes/tofu-vegetable-stir-fry.html">Tofu Vegetable Stir Fry</a></li>
+        <li><a href="recipes/avocado-salad.html">Avocado and Black Bean Salad</a></li>
+    </ul>
 </body>
 </html>
